# ck-apstra-web-tool

./: README.md  pyproject.toml  requirements.txt
src/app/: common.py  main.py
src/app/lib/: common.py  generic_system.py  generic_system_worker.py
src/app/static/: env-example.json  index.html
src/app/static/css/: style.css
src/app/static/js/: main.js
